[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Pavel Boyko <p.boyko@tinkoff.ru>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.91"
docker = "^7.0.0"


[tool.poetry.group.dev.dependencies]
boto3-stubs = "^1.34.91"
mypy-boto3-logs = "^1.34.66"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

